# LatticeScope

./: .gitignore  DEMO.md  README.md  build_shim.py  cleanup.sh  cli.py  cshim.c  fuzz.py  init.py  lattice.py  main.py  mutators.py  requirements.txt  selftest.py  stats.py  target.py  test_sign_tvla.py  tvla.py  ui.py
demo/: build_demo.sh  vuln_dsa.c  vuln_kem.c
latticescope/: __init__.py  __main__.py
rust/: Cargo.toml  DEMO.md  Makefile  README.md  build.rs  cleanup.sh  fuzz.rs  main.rs  mutators.rs  packing.rs  profiles.rs  stats.rs  sys.rs  tvla.rs  ui.rs
rust/examples/: mock_pqc.c
